--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,18 +1,17 @@
 .footer {
-  margin-top: 64px;
+  padding-top: 64px;
   padding-left: 16px;
 }
 
 @media (min-width: 768px) {
   .footer {
     display: flex;
-    padding: 0 24px;
-    margin-top: 89px;
+    padding: 89px 24px 0;
   }
 }
 
 @media (min-width: 1024px) {
   .footer {
-    margin-top: 92px;
+    padding: 92px 48px 0;
   }
 }
