--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,5 +1,6 @@
 .cover {
   display: flex;
+  position: relative;
   z-index: 0;
   max-width: 1184px;
   height: 62.5vw;
@@ -11,6 +12,7 @@
   background-image: url('../../images/cover-trains.jpg');
   background-position: center;
   background-size: contain;
+  background-repeat: no-repeat;
   transition: opacity .5s ease;
   cursor: pointer;
 }
