--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,35 +1,11 @@
 .cover {
-  display: flex;
-  position: relative;
-  z-index: 0;
-  max-width: 1184px;
+  width: 100%;
   height: 62.5vw;
+  max-width: 1184px;
   min-height: 200px;
   max-height: 740px;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
   background-image: url('../../images/cover-trains.jpg');
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
-  transition: opacity .5s ease;
-  cursor: pointer;
-}
-
-.cover::before {
-  content:'';
-  display: block;
-  position: absolute;
-  z-index: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #2A2C2F;
-  opacity: .3;
-}
-
-.cover:hover::before {
-  opacity: .8;
 }
