--- a/blocks/main/main.css
+++ b/blocks/main/main.css
@@ -1,7 +1,5 @@
-.lead__image-wrapper {
+.main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
-  margin: 0;
 }
