--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,12 +1,6 @@
 .place__link {
-  color: #fff;
   font-size: 18px;
   line-height: 22px;
-  font-weight: normal;
+  font-weight: 400;
   text-decoration: underline;
-  transition: opacity .5s ease;
-}
-
-.place__link:hover {
-  opacity: .8;
 }
