--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -2,15 +2,11 @@
   position: relative;
   z-index: 1;
   width: 288px;
-  margin: 0 auto 16px;
+  margin-bottom: 16px;
   font-style: normal;
   font-weight: 900;
   font-size: 32px;
   line-height: 35px;
-  color: #fff;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizeLegibility;
 }
 
 @media (min-width: 768px) {
