--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,13 +1,16 @@
 .lead__caption {
-  position: relative;
+  align-self: flex-start;
+  width: 100%;
+  max-width: 984px;
+  margin: 0;
   padding: 0;
-  margin: 8px 0 0 16px;
+  margin-left: 16px;
+  margin-top: 8px;
   font-size: 10px;
   line-height: 1.4;
   font-weight: normal;
   text-transform: uppercase;
   letter-spacing: 1.5px;
-  color: #fff;
 }
 
 @media (min-width: 768px) {
@@ -18,12 +21,6 @@
 
 @media (min-width: 1024px) {
   .lead__caption {
-    margin-left: 48px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .lead__caption {
-    margin-left: 148px;
+    margin-left: 0;
   }
 }
