--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,12 +1,10 @@
 .lead__subtitle {
-  width: 90%;
-  padding: 0;
-  margin: 16px auto 0;
+  max-width: 640px;
+  margin: 16px 16px 0;
   text-align: center;
   font-size: 16px;
   line-height: 20px;
   font-weight: normal;
-  color: #fff;
 }
 
 @media (min-width: 768px) {
@@ -14,6 +12,13 @@
     font-size: 30px;
     line-height: 1.2;
     width: 640px;
-    margin-top: 32px;
+    margin: 32px 24px 0;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lead__subtitle {
+    margin-left: 0;
+    margin-right: 0;
   }
 }
