--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,3 +1,21 @@
 .lead {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-sizing: border-box;
+  width: 100%;
+}
 
+@media (min-width: 1024px) {
+  .lead {
+    padding-left: 48px;
+    padding-right: 48px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .lead {
+    padding-left: 148px;
+    padding-right: 148px;
+  }
 }
