--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -4,4 +4,8 @@
   max-width: 1280px;
   min-width: 320px;
   margin: 0 auto;
+  color: #fff;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
