--- a/pages/index.css
+++ b/pages/index.css
@@ -2,7 +2,15 @@
 @import url(../vendor/inter/inter.css);
 
 @import url(../blocks/page/page.css);
-@import url(../blocks/page/__relative-block/page__relative-block.css);
+@import url(../blocks/page/__link/page__link.css);
+@import url(../blocks/page/__list/page__list.css);
+@import url(../blocks/page/__section/page__section.css);
+@import url(../blocks/page/__section/_type/page__section_type_widescreen.css);
+@import url(../blocks/page/__places/page__places.css);
+@import url(../blocks/page/__place/page__place.css);
+@import url(../blocks/page/__cover/page__cover.css);
+@import url(../blocks/page/__footer/page__footer.css);
+
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
@@ -10,6 +18,8 @@
 @import url(../blocks/header/__list-item/header__list-item.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
 @import url(../blocks/header/__lang-link/_active/header__lang-link_active.css );
+
+@import url(../blocks/main/main.css);
 
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__title/lead__title.css);
@@ -30,7 +40,6 @@
 @import url(../blocks/photo-grid/photo-grid__item/photo-grid__item.css);
 @import url(../blocks/photo-grid/photo-grid__image/photo-grid__image.css);
 
-@import url(../blocks/places/places.css);
 @import url(../blocks/place/place.css);
 @import url(../blocks/place/__title/place__title.css);
 @import url(../blocks/place/__image/place__image.css);
@@ -49,9 +58,3 @@
 @import url(../blocks/footer/__list-item/footer__list-item.css);
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
-
-@import url(../blocks/page/__intro/page__intro.css);
-@import url(../blocks/page/__photo-grid/page__photo-grid.css);
-@import url(../blocks/page/__place/page__place.css);
-@import url(../blocks/page/__cover/page__cover.css);
-@import url(../blocks/page/__footer/page__footer.css);
